<resources>
    <string name="app_name">iCareApp 2.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="login">LogIn</string>
    <string name="signup">signup</string>
    <string name="facebook_login">FaceBook LogIn</string>
    <string name="google_login">google login</string>
    <string name="twitter_login">twitterLogin</string>
    <string name="icareapp_logo">iCareApp Logo</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="submit">Submit</string>
    <string name="height">Height</string>
    <string name="selectMale">Male</string>
    <string name="selectFemale">Female</string>
    <string name="selectOption">Select</string>
    <string name="please_register_your_data">Please Register Your Data</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="height_m">Height (m)</string>
    <string name="estimate">Estimate!</string>
    <string name="imc">IMC</string>
    <string name="results">Results</string>
    <string name="bmi">BMI</string>
    <string name="basal_metabolic_rate">Basal Metabolic Rate Result</string>
    <string name="bmr">BMR</string>
    <string name="body_mass_index_result">Body Mass Index Result</string>
    <string name="return_button">Return</string>
</resources>