<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultsActivity">

    <ImageView
        android:id="@+id/mainIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center"
        android:src="@drawable/icarelogo_2"
        android:contentDescription="@string/icareapp_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:hint="@string/results"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bmi"
            android:layout_margin="12dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/resultado_imc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/body_mass_index_result"
            android:layout_margin="12dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bmr"
            android:layout_margin="12dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/resultado_metabolismobasal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/basal_metabolic_rate"
            android:layout_margin="12dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginBottom="32dp"
            />

    </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/returnButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/return_button"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"/>

</LinearLayout>